--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -35,4 +35,9 @@ jobs:
            # Add the rules that Semgrep uses by setting the SEMGREP_RULES environment variable. 
 
            SEMGREP_RULES: .semgrep/rules # more at semgrep.dev/explore
+         - run: cat findings.json
+         - uses: actions/upload-artifact@v2
+           with:
+            name: semgrep-findings
+            path: findings.json
 
