--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -35,7 +35,9 @@ jobs:
            # Add the rules that Semgrep uses by setting the SEMGREP_RULES environment variable. 
 
            SEMGREP_RULES: .semgrep/rules # more at semgrep.dev/explore
-      - uses: actions/upload-artifact@v2
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v3
         with:
-           name: semgrep-findings
-           path: findings.json
+           name: findings
+           path: output/findings.json
+           retention-days: 5
